--- a/public/chat.html
+++ b/public/chat.html
@@ -10,12 +10,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>AliceChat App</title>
+    <title>LiveChat</title>
   </head>
   <body>
     <div class="chat-container">
       <header class="chat-header">
-        <h1><i class="fas fa-smile"></i> AliceChat</h1>
+        <h1><i class="fas fa-smile"></i> LiveChat</h1>
         <a href="index.html" class="btn">Leave Room</a>
       </header>
       <main class="chat-main">
