--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>AliceChat App</title>
+		<title>LiveChat</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-smile"></i>AliceChat</h1>
+				<h1><i class="fas fa-smile"></i>LiveChat</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
@@ -39,6 +39,9 @@
 							<option value="C#">C#</option>
 							<option value="Ruby">Ruby</option>
 							<option value="Java">Java</option>
+							<option value="Religion">Religion</option>
+							<option value="Politics">Politics</option>
+							<option value="Dating">Dating</option>
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
